--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,8 +128,8 @@ article{
         }
     }
     .article__li__fa{
-        padding-left: 13px;
-        padding-right: 23px;
+        margin-left: 11px;
+        padding-right: 9px;
         font-size: 1.1em;
         color: #6b6b6b;
     }
